--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.14",
     "expo": "^50.0.14",
@@ -18,7 +19,6 @@
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.0"
   },
-  "devDependencies": {},
   "keywords": [],
   "description": ""
 }
