--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.14",
     "emoji-picker-react": "^4.9.2",
     "expo": "^50.0.14",
+    "metro-cache": "^0.80.8",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
